refactor: Adjustment and improvement of models and dto, separation of DTOS from course request and response